--- a/cvpr_submission/experiments.tex
+++ b/cvpr_submission/experiments.tex
@@ -160,7 +160,7 @@ is a slight loss incurred by including everything. As seen in the figure, just j
 
  \begin{figure}
  	\centering
- 	\includegraphics[width=\columnwidth]{img/results/COG_reasoning_transfer}
+ 	\includegraphics[width=\columnwidth]{img/results/COG_reasoning_transfer.pdf}
  	\caption{COG accuracies for all task groups $t$ when training on $t$ only, training on Group A or B and training on all tasks.}
  	\label{fig:COG-reasoning-results}
  \end{figure}
