--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -16,9 +16,20 @@
 \usepackage{multirow}
 \usepackage{adjustbox}
 \usepackage{tabularx}
+\usepackage{xcolor}
 
-\usepackage[pagebackref=true,breaklinks=true,colorlinks,bookmarks=false]{hyperref}
-
+\usepackage{hyperref}
+\hypersetup{
+	pagebackref,
+	colorlinks,
+	breaklinks,
+	bookmarks=false,
+	linkcolor={red!50!black},
+	citecolor={blue!50!black},
+	urlcolor={blue!80!black},
+	%linkcolor=OliveGreen,
+	%citecolor=Blue,
+}
 %\cvprfinalcopy % *** Uncomment this line for the final submission
 
 \def\cvprPaperID{7813} % *** Enter the CVPR Paper ID here
