--- a/cvpr_submission/samnet.tex
+++ b/cvpr_submission/samnet.tex
@@ -82,7 +82,7 @@ We stress that the network has to learn via training how to correctly implement 
 The unit first determines the memory location where an object could be added:
 \[ \vec{w}_t = \doreplace \cdot \rhead_t + \doadd \cdot \whead_{t-1} \]
 Above, $\vec{w}_t$ denotes the pseudo-attention vector that represents the ``location'' where the memory update should happen.
-$\vec{w}_t$ sums up to at most equal to 1; and can be zero, indicating in this case there is no need adding a new object nor replacing an existing object.
+$\vec{w}_t$ sums up to at most 1 and can be zero, indicating in this case there is no need adding a new object nor replacing an existing object.
 We then update the memory accordingly as:
 \[ \vec{M}_t = \vec{M}_{t-1} \odot (\vec{J} - \vec{w}_t  \otimes \mathbf{1}) + \vec{w}_t  \otimes \vec{vo}_t,\]
 where $\vec{vo}_t$ denotes the object returned by the visual retrieval unit. 
@@ -99,8 +99,8 @@ This unit updates the (recurrent) summary object to equal the outcome of the $t$
 We first determine whether the relevant object $\vec{ro}_t$ should be obtained from memory or the frame according to:
 \[ \vec{ro}_t = \imatch_t \cdot \vec{vo}_t + \mmatch_t \cdot \vec{mo}_t \]
 Note that $\vec{ro}_t$ is allowed to be a null object (i.e. 0 vector) in case neither of the gates evaluate to true.
-Finally, $\vec{so}_t$ is the output of a simple linear layer whose inputs are $\vec{ro}_t$ and the previous summary object $\vec{so}_{t-1}$.
-This serves to retain additional information that was in $\vec{so}_{t-1}$, e.g., if it held the partial result of a complex query with Boolean connectives.
+Finally, $\vec{so}_t$ is the output of a linear layer whose inputs are $\vec{ro}_t$ and the previous summary object $\vec{so}_{t-1}$.
+This serves to retain additional information in $\vec{so}_{t-1}$, e.g., if it held the partial result of a complex query with Boolean connectives.
 
 
 %For details of the modules not covered here, please see the appendix.
