Remove Appendix from main paper. Will make it a separate file.

--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -152,12 +152,13 @@ Thomas J. Watson Research Center, Yorktown Heights, NY 10598, USA\\
 
 \input{summary}
 
+\clearpage
 {\small
 \bibliographystyle{ieee_fullname}
 \bibliography{bibliography}
 }
 
-\clearpage
-\input{appendix}
+%\clearpage
+%\input{appendix}
 
 \end{document}
