--- a/cvpr_submission/appendix.tex
+++ b/cvpr_submission/appendix.tex
@@ -1,11 +1,8 @@
-\section{Supplementary Material}
-
-\subsection{Datasets: COG \& CLEVR-CoGenT}
+\section{Datasets: COG \& CLEVR-CoGenT}
 \label{sec:datasets-desc}
 
 \begin{table}[ht]
 	\centering
-	\begin{adjustbox}{width=0.5\textwidth}
 	\begin{tabular}{lcccccc}
 		\toprule
 		Variant    &  	number &  	maximum & maximum & size & size & size  \\ 
@@ -16,157 +13,129 @@
 		Hard  & 8 & 7 & 10 & 10000320 & 500016  & 500016 \\
 		\bottomrule	
 	\end{tabular}
-	\end{adjustbox}
-	\caption{Details of the Canonical and Hard variants of the COG dataset}
+	\caption{Details of the Canonical and Hard variants of the COG dataset.}
 	\label{tab:cog_variants_supplement}
 \end{table}
 
 \begin{table}[ht]
 	\centering
-	\begin{adjustbox}{width=0.5\textwidth}
 	\begin{tabular}{cccc}
 		\toprule
-		Dataset        & Cubes              & Cylinders &  Spheres         \\
+		Dataset	&	Cubes	&	Cylinders	&	Spheres	\\
 		\midrule
-		CoGenT A & gray / blue / brown / yellow  & red / green / purple / cyan       &    any color  \\
-		CoGenT B  & red / green / purple / cyan &   gray / blue / brown / yellow       &      any color  \\
+		CoGenT-A	&	Gray / Blue / Brown / Yellow	&	Red / Green / Purple / Cyan	&	Any color	\\
+		CoGenT-B	&	Red / Green / Purple / Cyan	&	Gray / Blue / Brown / Yellow	&	Any color 	\\
 		\bottomrule
 	\end{tabular}
-	\end{adjustbox}
 	\caption{Colors \& shapes combinations present in CoGenT-A \& -B datasets.}
     \label{tab:cogent_conditions_supplement}
 \end{table}
 
 The CoGenT dataset contains:
 \begin{itemize}
+	\def\labelitemi{--}
 	\item Training set of 70,000 images and 699,960 questions in Condition A,
-	\item	Validation set of 15,000 images and 149,991 questions in Condition A,
-	\item	Test set of 15,000 images and 149,980 questions in Condition A (without answers),
-	\item	Validation set of 15,000 images and 150,000 questions in Condition B,
-	\item	Test set of 15,000 images and 149,992 questions in Condition B (without answers),
-%	\item	Scene graphs and functional programs for all training/validation images/questions.
+	\item Validation set of 15,000 images and 149,991 questions in Condition A,
+	\item Test set of 15,000 images and 149,980 questions in Condition A (without answers),
+	\item Validation set of 15,000 images and 150,000 questions in Condition B,
+	\item Test set of 15,000 images and 149,992 questions in Condition B (without answers),
+	\item Scene graphs and functional programs for all training/validation images/questions.
 \end{itemize}
 
-\subsection{Complete COG results}
+\clearpage
+\section{Complete COG results}
 \label{sec:cog-all-results}
 
 \begin{table*}[htb]
-	\caption{COG test set accuracies for SAMNet \& COG models. Below `paper' denotes results from~\cite{yang2018dataset} 
-		while `code' denotes results of our experiments using their implementation~\cite{yang2018implement}}
+	\caption{COG test set accuracies for SAMNet \& COG models. Below `paper' denotes results from~\cite{yang2018dataset}  while `code' denotes results of our experiments using their implementation~\cite{yang2018implement}.}
 	\centering
-	\begin{adjustbox}{width=\textwidth}
-		\begin{tabular}{lcccccccccc}
-			\toprule
-			Model & & SAMNet & && && COG Model&& \\
-			\cmidrule{2-5} \cmidrule{7-11} 
-			&&&&& & paper & ours & ours & paper&\\
-			\cmidrule{7-9} \cmidrule{10-11}
-			Trained on       & canonical & canonical & canonical & hard &           &  canonical  & canonical  & canonical & hard \\ 
-			Fine tuned on  & - & - & hard  & - &           & -   & - & hard & - \\ 
-			Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard  \\ 
-			\midrule
-			
-			Overall accuracy & 98.0 & 91.6 & 96.5  & 96.1 &           & 97.6  & 65.9 & 78.1& 80.1 \\ 
-			
-			\midrule 
-			
-			AndCompareColor			&	93.5	&	82.7	&	89.2	&	80.6	&	&	81.9	&	57.1	&	60.7	&	51.4	 \\
-			AndCompareShape			&	93.2	&	83.7	&	89.7	&	80.1	&	&	80.0	&	53.1	&	50.3	&	50.7 \\
-			AndSimpleCompareColor		&	99.2	&	85.3	&	97.6	&	99.4	&	&	99.7	&	53.4	&	77.1	&	78.2 \\
-			AndSimpleCompareShape		&	99.2	&	85.8	&	97.6	&	99.2	&	&	100.0	&	56.7	&	79.3	&	77.9 \\
-			CompareColor			&	98.1	&	89.3	&	95.9	&	99.7	&	&	99.2	&	56.1	&	67.9	&	50.1 \\
-			CompareShape			&	98.0	&	89.7	&	95.9	&	99.2	&	&	99.4	&	66.8	&	65.4	&	50.5	 \\
-			Exist				&	100.0	&	99.7	&	99.8	&	99.8	&	&	100.0	&	63.5	&	96.1	&	99.3 \\
-			ExistColor			&	100.0	&	99.6	&	99.9	&	99.9	&	&	99.0	&	70.9	&	99	&	89.8 \\
-			ExistColorOf			&	99.9	&	95.5	&	99.7	&	99.8	&	&	99.7	&	51.5	&	76.1	&	73.1 \\
-			ExistColorSpace			&	94.1	&	88.8	&	91.0	&	90.8	&	&	98.9	&	72.8	&	77.3	&	89.2 \\
-			ExistLastColorSameShape		&	99.5	&	99.4	&	99.4	&	98.0	&	&	100.0	&	65.0	&	62.5	&	50.4 \\
-			ExistLastObjectSameObject	&	97.3	&	97.5	&	97.7	&	97.5	&	&	98.0	&	77.5	&	61.7	&	60.2 \\
-			ExistLastShapeSameColor		&	98.2	&	98.5	&	98.8	&	97.5	&	&	100.0	&	87.8	&	60.4	&	50.3 \\
-			ExistShape			&	100.0	&	99.5	&	100.0	&	100.0	&	&	100.0	&	77.1	&	98.2	&	92.5 \\
-			ExistShapeOf			&	99.4	&	95.9	&	99.2	&	99.2	&	&	100.0	&	52.7	&	74.7	&	72.70 \\
-			ExistShapeSpace			&	93.4	&	87.5	&	91.1	&	90.5	&	&	97.7	&	70	&	89.8	&	89.80 \\
-			ExistSpace			&	95.3	&	89.7	&	93.2	&	93.3	&	&	98.9	&	71.1	&	88.1	&	92.8 \\
-			GetColor			&	100.0	&	95.8	&	99.9	&	100.0	&	&	100.0	&	71.4	&	83.1	&	97.9 \\
-			GetColorSpace			&	98.0	&	90.0	&	95.0	&	95.4	&	&	98.2	&	71.8	&	73.	&	92.3 \\
-			GetShape			&	100.0	&	97.3	&	99.9	&	99.9	&	&	100.0	&	83.5	&	89.2	&	97.1	 \\
-			GetShapeSpace			&	97.5	&	89.4	&	93.9	&	94.3	&	&	98.1	&	78.7	&	77.3	&	90.3 \\
-			SimpleCompareShape		&	99.9	&	91.4	&	99.7	&	99.9	&	&	100.0	&	67.7	&	96.7	&	99.3 \\
-			SimpleCompareColor		&	100.0	&	91.6	&	99.80	&	99.9	&	&	100.0	&	64.2	&	90.4	&	99.3 \\
-			\bottomrule
+	\noindent
+	\begin{tabular}{lcccccccccc}
+		\toprule
+		Model & & SAMNet & && && COG Model&& \\
+		\cmidrule{2-5} \cmidrule{7-11} 
+		&&&&& & paper & ours & ours & paper&\\
+		\cmidrule{7-9} \cmidrule{10-11}
+		Trained on       & canonical & canonical & canonical & hard &           &  canonical  & canonical  & canonical & hard \\ 
+		Fine tuned on  & - & - & hard  & - &           & -   & - & hard & - \\ 
+		Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard  \\ 
+		\midrule
+		
+		Overall accuracy & 98.0 & 91.6 & 96.5  & 96.1 &           & 97.6  & 65.9 & 78.1& 80.1 \\ 
+		
+		\midrule 
+		
+		AndCompareColor			&	93.5	&	82.7	&	89.2	&	80.6	&	&	81.9	&	57.1	&	60.7	&	51.4	 \\
+		AndCompareShape			&	93.2	&	83.7	&	89.7	&	80.1	&	&	80.0	&	53.1	&	50.3	&	50.7 \\
+		AndSimpleCompareColor		&	99.2	&	85.3	&	97.6	&	99.4	&	&	99.7	&	53.4	&	77.1	&	78.2 \\
+		AndSimpleCompareShape		&	99.2	&	85.8	&	97.6	&	99.2	&	&	100.0	&	56.7	&	79.3	&	77.9 \\
+		CompareColor			&	98.1	&	89.3	&	95.9	&	99.7	&	&	99.2	&	56.1	&	67.9	&	50.1 \\
+		CompareShape			&	98.0	&	89.7	&	95.9	&	99.2	&	&	99.4	&	66.8	&	65.4	&	50.5	 \\
+		Exist				&	100.0	&	99.7	&	99.8	&	99.8	&	&	100.0	&	63.5	&	96.1	&	99.3 \\
+		ExistColor			&	100.0	&	99.6	&	99.9	&	99.9	&	&	99.0	&	70.9	&	99	&	89.8 \\
+		ExistColorOf			&	99.9	&	95.5	&	99.7	&	99.8	&	&	99.7	&	51.5	&	76.1	&	73.1 \\
+		ExistColorSpace			&	94.1	&	88.8	&	91.0	&	90.8	&	&	98.9	&	72.8	&	77.3	&	89.2 \\
+		ExistLastColorSameShape		&	99.5	&	99.4	&	99.4	&	98.0	&	&	100.0	&	65.0	&	62.5	&	50.4 \\
+		ExistLastObjectSameObject	&	97.3	&	97.5	&	97.7	&	97.5	&	&	98.0	&	77.5	&	61.7	&	60.2 \\
+		ExistLastShapeSameColor		&	98.2	&	98.5	&	98.8	&	97.5	&	&	100.0	&	87.8	&	60.4	&	50.3 \\
+		ExistShape			&	100.0	&	99.5	&	100.0	&	100.0	&	&	100.0	&	77.1	&	98.2	&	92.5 \\
+		ExistShapeOf			&	99.4	&	95.9	&	99.2	&	99.2	&	&	100.0	&	52.7	&	74.7	&	72.70 \\
+		ExistShapeSpace			&	93.4	&	87.5	&	91.1	&	90.5	&	&	97.7	&	70	&	89.8	&	89.80 \\
+		ExistSpace			&	95.3	&	89.7	&	93.2	&	93.3	&	&	98.9	&	71.1	&	88.1	&	92.8 \\
+		GetColor			&	100.0	&	95.8	&	99.9	&	100.0	&	&	100.0	&	71.4	&	83.1	&	97.9 \\
+		GetColorSpace			&	98.0	&	90.0	&	95.0	&	95.4	&	&	98.2	&	71.8	&	73.	&	92.3 \\
+		GetShape			&	100.0	&	97.3	&	99.9	&	99.9	&	&	100.0	&	83.5	&	89.2	&	97.1	 \\
+		GetShapeSpace			&	97.5	&	89.4	&	93.9	&	94.3	&	&	98.1	&	78.7	&	77.3	&	90.3 \\
+		SimpleCompareShape		&	99.9	&	91.4	&	99.7	&	99.9	&	&	100.0	&	67.7	&	96.7	&	99.3 \\
+		SimpleCompareColor		&	100.0	&	91.6	&	99.80	&	99.9	&	&	100.0	&	64.2	&	90.4	&	99.3 \\
+		\bottomrule
 		\end{tabular}
-	\end{adjustbox}
 	\label{tab:all-results}
 \end{table*}
 
-
-\subsection{Complete CLEVR-CoGenT results}
+\clearpage
+\section{Complete CLEVR-CoGenT results}
 \label{sec:full-cogent-results}
 
 \begin{table*}[htb]
 	\centering
+	\noindent
 	\caption{Complete set of results for SAMNet on CLEVR-CoGenT.}\label{tab:CoGenT-results}
-	\begin{adjustbox}{width=0.99\textwidth}
-		\begin{tabular}{c c c c c c c }\toprule
-			\multicolumn{1}{c }{\textbf{}} & \multicolumn{6}{c }{\textbf{Test Accuracy (\%)}} \\  
-			\multicolumn{1}{c }{\textbf{}} & \multicolumn{6}{c }{on \texttt{valA} -- 150,000 samples} \\ 
-			\cmidrule(lr){2-7}
-			\multicolumn{1}{ c }{\textbf{Experiments}} & \textbf{Overall}& \textbf{Exist}  & \textbf{Count} & \textbf{CompareInteger} & \textbf{CompareAttribute} & \textbf{QueryAttribute}\\ 
-			\cmidrule(lr){1-1}
-			\cmidrule(lr){2-7}
-			\multicolumn{1}{ c }{Exist only} & 26.07 & \emph{74.20}	& 0.0	& 59.79	& 59.15 & 0.0 \\ 
-			\multicolumn{1}{ c }{Count only} & 14.89  & 0.0	& \emph{62.78}	& 0.0 & 0.0 & 0.0 \\ 
-			\multicolumn{1}{ c }{CompareInteger only} & 23.44 & 48.15	& 0.0	& \emph{77.98}	& 54.08 & 0.0 \\ 
-			\multicolumn{1}{ c }{CompareAttribute only} & 23.50 & 51.93	& 0.0 & 59.06 & \emph{61.73} & 0.0 \\ 
-			\multicolumn{1}{ c }{QueryAttribute only} & 34.64 	& 0.0	& 0.0	& 0.0 & 0.0 & \emph{97.08} \\ 		
-			\cmidrule(lr){1-1}
-			\cmidrule(lr){2-7}
-			
-			\multicolumn{1}{ c }{All tasks} & 95.32 & 98.4 	& 86.75	& 96.0	& 98.65	& 98.02 \\ 
-			\cmidrule(lr){1-1}
-			\cmidrule(lr){2-7}
-			
-			\multicolumn{1}{ c }{All tasks but Exist} & 90.33 	& \emph{60.42}	& 86.12	& 96.18	& 98.52 & 98.60 \\ 
-			\multicolumn{1}{ c }{All tasks but Count} & 74.59 	& 97.51	& \emph{0.0}	& 94.37	& 98.42 & 98.47 \\ 
-			\multicolumn{1}{ c }{All tasks but CompareInteger} & 91.53 	& 98.22	& 86.09	& \emph{56.35}	& 98.78 & 98.40 \\ 
-			\multicolumn{1}{ c }{All tasks but CompareAttribute} & 81.92 	& 98.32	& 86.36	& 95.86	& \emph{23.18} & 98.44 \\ 
-			\multicolumn{1}{ c }{All tasks but QueryAttribute} & 42.17 	& 76.79	& 54.64	& 79.87 & 64.13 & \emph{0.0} \\ 
-			
-			\cmidrule(lr){1-1}
-			\cmidrule(lr){2-7}
-			
-			\multicolumn{1}{ c }{\textit{Trained on all tasks -- Finetune on $t$}} & &  & &  & &\\ 
-			\multicolumn{1}{ c }{Exist} & 94.16 & \emph{98.04} & 82.96 & 95.02 & 98.12 & 97.97 \\ 
-			\multicolumn{1}{ c }{Count} & 95.10 & 96.46 & \emph{88.28} & 94.78 & 97.01 & 98.26 \\
-			\multicolumn{1}{ c }{CompareInteger} & 95.31 & 98.39 & 86.56 & \emph{96.07} & 98.70 & 98.09 \\
-			\multicolumn{1}{ c }{CompareAttribute} & 95.31 & 98.40 & 86.78 & 96.00 & \emph{98.66} & 98.04 \\
-			\multicolumn{1}{ c }{QueryAttribute} & 93.49 & 97.45 & 82.09 & 92.23 & 97.85& \emph{97.76} \\
-			
-			\bottomrule
-		\end{tabular}
-	\end{adjustbox}
+	\begin{tabular}{c c c c c c c }\toprule
+		\multicolumn{1}{c }{\textbf{}} & \multicolumn{6}{c }{\textbf{Test Accuracy (\%)}} \\  
+		\multicolumn{1}{c }{\textbf{}} & \multicolumn{6}{c }{on \texttt{valA} -- 150,000 samples} \\ 
+		\cmidrule(lr){2-7}
+		\multicolumn{1}{ c }{\textbf{Experiments}} & \textbf{Overall}& \textbf{Exist}  & \textbf{Count} & \textbf{CompareInteger} & \textbf{CompareAttribute} & \textbf{QueryAttribute}\\ 
+		\cmidrule(lr){1-1}
+		\cmidrule(lr){2-7}
+		\multicolumn{1}{ c }{Exist only} & 26.07 & \emph{74.20}	& 0.0	& 59.79	& 59.15 & 0.0 \\ 
+		\multicolumn{1}{ c }{Count only} & 14.89  & 0.0	& \emph{62.78}	& 0.0 & 0.0 & 0.0 \\ 
+		\multicolumn{1}{ c }{CompareInteger only} & 23.44 & 48.15	& 0.0	& \emph{77.98}	& 54.08 & 0.0 \\ 
+		\multicolumn{1}{ c }{CompareAttribute only} & 23.50 & 51.93	& 0.0 & 59.06 & \emph{61.73} & 0.0 \\ 
+		\multicolumn{1}{ c }{QueryAttribute only} & 34.64 	& 0.0	& 0.0	& 0.0 & 0.0 & \emph{97.08} \\ 		
+		\cmidrule(lr){1-1}
+		\cmidrule(lr){2-7}
+		
+		\multicolumn{1}{ c }{All tasks} & 95.32 & 98.4 	& 86.75	& 96.0	& 98.65	& 98.02 \\ 
+		\cmidrule(lr){1-1}
+		\cmidrule(lr){2-7}
+		
+		\multicolumn{1}{ c }{All tasks but Exist} & 90.33 	& \emph{60.42}	& 86.12	& 96.18	& 98.52 & 98.60 \\ 
+		\multicolumn{1}{ c }{All tasks but Count} & 74.59 	& 97.51	& \emph{0.0}	& 94.37	& 98.42 & 98.47 \\ 
+		\multicolumn{1}{ c }{All tasks but CompareInteger} & 91.53 	& 98.22	& 86.09	& \emph{56.35}	& 98.78 & 98.40 \\ 
+		\multicolumn{1}{ c }{All tasks but CompareAttribute} & 81.92 	& 98.32	& 86.36	& 95.86	& \emph{23.18} & 98.44 \\ 
+		\multicolumn{1}{ c }{All tasks but QueryAttribute} & 42.17 	& 76.79	& 54.64	& 79.87 & 64.13 & \emph{0.0} \\ 
+		
+		\cmidrule(lr){1-1}
+		\cmidrule(lr){2-7}
+		
+		\multicolumn{1}{ c }{\textit{Trained on all tasks -- Finetune on $t$}} & &  & &  & &\\ 
+		\multicolumn{1}{ c }{Exist} & 94.16 & \emph{98.04} & 82.96 & 95.02 & 98.12 & 97.97 \\ 
+		\multicolumn{1}{ c }{Count} & 95.10 & 96.46 & \emph{88.28} & 94.78 & 97.01 & 98.26 \\
+		\multicolumn{1}{ c }{CompareInteger} & 95.31 & 98.39 & 86.56 & \emph{96.07} & 98.70 & 98.09 \\
+		\multicolumn{1}{ c }{CompareAttribute} & 95.31 & 98.40 & 86.78 & 96.00 & \emph{98.66} & 98.04 \\
+		\multicolumn{1}{ c }{QueryAttribute} & 93.49 & 97.45 & 82.09 & 92.23 & 97.85& \emph{97.76} \\
+		
+		\bottomrule
+	\end{tabular}
 \end{table*}
-
-%\begin{table}[htb]
-%	\centering
-%	\noindent
-%	\begin{adjustbox}{width=0.5\textwidth}
-%		\begin{tabular}{c c c c c c c }\toprule
-%			\multicolumn{1}{c }{\textbf{}} & \multicolumn{6}{c }{\textbf{Test Accuracy (\%)}} \\  
-%			\multicolumn{1}{c }{\textbf{}} & \multicolumn{6}{c }{on \texttt{valA} -- 150,000 samples} \\ 
-%			\cmidrule(lr){2-7}
-%			\multicolumn{1}{ c }{\textbf{Experiments}} & \textbf{Overall}& \textbf{Exist}  & \textbf{Count} & \textbf{CompareInteger} & \textbf{CompareAttribute} & \textbf{QueryAttribute}\\ 
-%			\cmidrule(lr){1-1}
-%			\cmidrule(lr){2-7}
-%
-%			\multicolumn{1}{ c }{\textbf{Trained on all tasks but $t$ -- Finetune on $t$ }} & &  & &  & &\\ 
-%			\multicolumn{1}{ c }{Exist} & 86.24 & 98.04 & 56.59 & 87.99 & 94.17 & 97.14 \\ 
-%			\multicolumn{1}{ c }{Count} & 46.97 & 2.80 & 78.73 & 15.60 & 35.06 & 56.60 \\
-%			\multicolumn{1}{ c }{CompareInteger} & 73.46 & 72.89 & 42.42 & 92.07 & 68.32 & 91.90 \\
-%			\multicolumn{1}{ c }{CompareAttribute} & 48.16 & 85.77 & 30.84 & 77.20 & 97.72 & 13.21 \\
-%			\multicolumn{1}{ c }{QueryAttribute} & 35.26 & 38.65 & 4.22 & 31.56 & 5.08 & 70.67 \\
-%			\bottomrule
-%		\end{tabular}
-%	\end{adjustbox}
-%	\caption{CoGenT accuracies with finetuning.}\label{tab:CoGenT-finetuning-results}
-%\end{table}
