Remove unused packages + correct tables size.

--- a/cvpr_submission/supplementary_material.tex
+++ b/cvpr_submission/supplementary_material.tex
@@ -2,16 +2,12 @@
 
 \usepackage{cvpr}
 \usepackage{times}
-\usepackage{graphicx}
-\usepackage{subcaption}
 \usepackage{booktabs}
 \usepackage{multirow}
-\usepackage{adjustbox}
-\usepackage{tabularx}
-\usepackage{xcolor}
 \usepackage{url}
 \usepackage{enumitem}
-\setlist{leftmargin=*} 
+\usepackage{adjustbox}
+\usepackage[pagebackref=true,breaklinks=true,letterpaper=true,colorlinks,bookmarks=false]{hyperref}
 
 %\cvprfinalcopy % *** Uncomment this line for the final submission
 
@@ -29,7 +25,6 @@
 \title{Transfer Learning in Multimodal Compositional and Relational Reasoning:\\Supplementary Material}
 
 %%%%%%%%% AUTHORS
-% WILL NEED TO REARRANGE THE AUTHORS LIST & GET CORRECT INSTITUTIONS / EMAILS
 \author{T.S. Jayram \and  Vincent Marois \and Vincent Albouy \and Tomasz Kornuta  \and Emre Sevgen \and Ahmet Ozcan\\
 IBM Research AI\\
 Almaden Research Center, San Jose, CA 95120, USA\\
