--- a/cvpr_submission/appendix.tex
+++ b/cvpr_submission/appendix.tex
@@ -49,7 +49,7 @@ The CoGenT dataset contains:
 \begin{table*}[htb]
 	\caption{COG test set accuracies for SAMNet \& COG models. Below `paper' denotes results from~\cite{yang2018dataset}  while `code' denotes results of our experiments using their implementation~\cite{yang2018implement}.}
 	\centering
-	\noindent
+	\begin{adjustbox}{width=\columnwidth}
 	\begin{tabular}{lcccccccccc}
 		\toprule
 		Model & & SAMNet & && && COG Model&& \\
@@ -90,6 +90,7 @@ The CoGenT dataset contains:
 		SimpleCompareColor		&	100.0	&	91.6	&	99.80	&	99.9	&	&	100.0	&	64.2	&	90.4	&	99.3 \\
 		\bottomrule
 		\end{tabular}
+		\end{adjustbox}
 	\label{tab:all-results}
 \end{table*}
 
@@ -99,8 +100,8 @@ The CoGenT dataset contains:
 
 \begin{table*}[htb]
 	\centering
-	\noindent
 	\caption{Complete set of results for SAMNet on CLEVR-CoGenT.}\label{tab:CoGenT-results}
+	\begin{adjustbox}{width=\columnwidth}
 	\begin{tabular}{c c c c c c c }\toprule
 		\multicolumn{1}{c }{\textbf{}} & \multicolumn{6}{c }{\textbf{Test Accuracy (\%)}} \\  
 		\multicolumn{1}{c }{\textbf{}} & \multicolumn{6}{c }{on \texttt{valA} -- 150,000 samples} \\ 
@@ -138,4 +139,5 @@ The CoGenT dataset contains:
 		
 		\bottomrule
 	\end{tabular}
+	\end{adjustbox}
 \end{table*}
