Small package fix.

--- a/cvpr_submission/supplementary_material.tex
+++ b/cvpr_submission/supplementary_material.tex
@@ -7,7 +7,7 @@
 \usepackage{url}
 \usepackage{enumitem}
 \usepackage{adjustbox}
-\usepackage[pagebackref=true,breaklinks=true,letterpaper=true,colorlinks,bookmarks=false]{hyperref}
+\usepackage[pagebackref=true,breaklinks=true,colorlinks,bookmarks=false]{hyperref}
 
 %\cvprfinalcopy % *** Uncomment this line for the final submission
 
