--- a/cvpr_submission/introduction.tex
+++ b/cvpr_submission/introduction.tex
@@ -24,7 +24,7 @@ While models such as BERT and ResNet can be transferred efficiently in the same 
 once the modalities have been fused.
 For example, in compositional reasoning problems that involve objects with multiple attributes,
 feature representations in the source domain may be entangled and not easily transfer over to the target domain~\cite{johnson2017clevr}.
-In video reasoning, an additional challenge in the temporal dimension is whether a model that is trained on shorter video sequences will 
+In video reasoning, an additional challenge in the temporal dimension is whether a model trained on shorter video sequences will 
 transfer over to longer sequences~\cite{yang2018dataset,song2018explore}.
 To address these challenges, mechanisms such as attention~\cite{bahdanau2014neural} 
 and external memory~\cite{graves2014neural, graves2016hybrid,weston2014memory} 
